Bug #3300 - Options menu doesn't update when creating/removing link in FileProperties

--- a/res/layout-v21/activity_upgrade.xml
+++ b/res/layout-v21/activity_upgrade.xml
@@ -70,7 +70,7 @@
 	                    android:id="@+id/upgrade_prolite_per_month_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/upgrade_orange"
+	                    android:textColor="@color/upgrade_white"
 	                    android:layout_toRightOf="@id/upgrade_prolite_decimal_text"
 	                    android:layout_alignBottom="@id/upgrade_prolite_integer_text"
 	                    android:layout_marginBottom="5dp"
@@ -273,7 +273,7 @@
 	                    android:id="@+id/upgrade_pro_i_per_month_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/upgrade_red"
+	                    android:textColor="@color/upgrade_white"
 	                    android:layout_toRightOf="@id/upgrade_pro_i_decimal_text"
 	                    android:layout_alignBottom="@id/upgrade_pro_i_integer_text"
 	                    android:layout_marginBottom="5dp"
@@ -475,7 +475,7 @@
 	                    android:id="@+id/upgrade_pro_ii_per_month_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/upgrade_red"
+	                    android:textColor="@color/upgrade_white"
 	                    android:layout_toRightOf="@id/upgrade_pro_ii_decimal_text"
 	                    android:layout_alignBottom="@id/upgrade_pro_ii_integer_text"
 	                    android:layout_marginBottom="5dp"
@@ -677,7 +677,7 @@
 	                    android:id="@+id/upgrade_pro_iii_per_month_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/upgrade_red"
+	                    android:textColor="@color/upgrade_white"
 	                    android:layout_toRightOf="@id/upgrade_pro_iii_decimal_text"
 	                    android:layout_alignBottom="@id/upgrade_pro_iii_integer_text"
 	                    android:layout_marginBottom="5dp"
