--- a/res/layout-v21/activity_upgrade_payment.xml
+++ b/res/layout-v21/activity_upgrade_payment.xml
@@ -16,14 +16,18 @@
             android:id="@+id/payment_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_margin="5dp">
+            android:background="@drawable/card_corner"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="2dp">
             
             <RelativeLayout 
                 android:id="@+id/payment_layout_title"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:background="#444444"
+                android:background="@drawable/card_corner_grey"
                 android:gravity="center_vertical">
                 
                 <TextView 
@@ -64,7 +68,7 @@
 	                    android:id="@+id/payment_per_month_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/upgrade_orange"
+	                    android:textColor="@color/upgrade_white"
 	                    android:layout_toRightOf="@id/payment_decimal_text"
 	                    android:layout_alignBottom="@id/payment_integer_text"
 	                    android:layout_marginBottom="5dp"
@@ -77,7 +81,7 @@
                 android:id="@+id/payment_layout_values_select"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="@color/white"
+                android:background="@drawable/card_corner"
                 android:gravity="center_vertical"
                 android:layout_below="@id/payment_layout_title">
                 
@@ -85,7 +89,7 @@
 	                android:id="@+id/payment_layout_values"
 	                android:layout_width="match_parent"
 	                android:layout_height="100dp"
-	                android:background="@color/white"
+	                android:background="@drawable/card_corner"
 	                android:gravity="center_vertical" >
 	                
                     <RelativeLayout 
@@ -177,13 +181,17 @@
             android:id="@+id/payment_layout_select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_margin="5dp">
+            android:background="@drawable/card_corner"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="2dp">
         		<RelativeLayout 
 	                android:id="@+id/payment_layout_select_inside"
 	                android:layout_width="match_parent"
 	                android:layout_height="50dp"
-	                android:background="@color/white"
+	                android:background="@drawable/card_corner"
 	                android:gravity="center">
 	                
                     <TextView
@@ -210,7 +218,7 @@
 		            android:id="@+id/payment_method_google_wallet"
 		            android:layout_width="match_parent"
 		            android:layout_height="wrap_content"
-		            android:background="@color/white"
+		            android:background="@drawable/card_corner"
 		            android:layout_below="@id/payment_separator">
 		            
 		            <ImageView 
@@ -239,7 +247,7 @@
 		            android:id="@+id/payment_method_credit_card"
 		            android:layout_width="match_parent"
 		            android:layout_height="wrap_content"
-		            android:background="@color/white"
+		            android:background="@drawable/card_corner"
 		            android:layout_below="@id/payment_method_google_wallet">
 		            
 		            <ImageView 
@@ -268,7 +276,7 @@
 		            android:id="@+id/payment_method_fortumo"
 		            android:layout_width="match_parent"
 		            android:layout_height="wrap_content"
-		            android:background="@color/white"
+		            android:background="@drawable/card_corner"
 		            android:layout_below="@id/payment_method_credit_card">
 		            
 		            <ImageView 
@@ -297,7 +305,7 @@
 	            android:id="@+id/payment_method_centili"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
-	            android:background="@color/white"
+	            android:background="@drawable/card_corner"
 	            android:layout_below="@id/payment_method_fortumo">
 	            
 	            <ImageView 
