Bug #3527 - Cards (elevation, borders and rounded corners) on MonthlyAnnualyFragment

--- a/res/layout-v21/activity_upgrade_monthly_annualy.xml
+++ b/res/layout-v21/activity_upgrade_monthly_annualy.xml
@@ -16,14 +16,18 @@
             android:id="@+id/monthly_annualy_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_margin="5dp">
+            android:background="@drawable/card_corner"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="2dp">
             
             <RelativeLayout 
                 android:id="@+id/monthly_annualy_layout_title"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:background="#444444"
+                android:background="@drawable/card_corner_grey"
                 android:gravity="center_vertical">
                 
                 <TextView 
@@ -64,7 +68,7 @@
 	                    android:id="@+id/monthly_annualy_per_month_text"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/upgrade_orange"
+	                    android:textColor="@color/upgrade_white"
 	                    android:layout_toRightOf="@id/monthly_annualy_decimal_text"
 	                    android:layout_alignBottom="@id/monthly_annualy_integer_text"
 	                    android:layout_marginBottom="5dp"
@@ -77,7 +81,7 @@
                 android:id="@+id/monthly_annualy_layout_values_select"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="@color/white"
+                android:background="@drawable/card_corner"
                 android:gravity="center_vertical"
                 android:layout_below="@id/monthly_annualy_layout_title">
                 
@@ -85,7 +89,7 @@
 	                android:id="@+id/monthly_annualy_layout_values"
 	                android:layout_width="match_parent"
 	                android:layout_height="100dp"
-	                android:background="@color/white"
+	                android:background="@drawable/card_corner"
 	                android:gravity="center_vertical" >
 	                
                     <RelativeLayout 
@@ -177,13 +181,17 @@
             android:id="@+id/monthly_annualy_layout_select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_margin="5dp">
+            android:background="@drawable/card_corner"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="2dp">
         		<RelativeLayout 
 	                android:id="@+id/monthly_annualy_layout_select_inside"
 	                android:layout_width="match_parent"
 	                android:layout_height="100dp"
-	                android:background="@color/white"
+	                android:background="@drawable/card_corner"
 	                android:gravity="center">
 	                
                     <TextView
@@ -320,7 +328,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:background="#ffffff"
+                    android:background="@drawable/card_corner"
                     android:layout_below="@id/monthly_annualy_buttons_layout">
 		            
                     <RelativeLayout 
@@ -334,10 +342,12 @@
 		                    android:id="@+id/monthly_annualy_subscribe_monthly_text"
 		                    android:layout_width="wrap_content"
 		                    android:layout_height="wrap_content"
-		                    android:textSize="14sp"
+		                    android:text="@string/general_subscribe"
 		                    android:textAllCaps="true"
+		                    android:textSize="14sp"
 		                    android:layout_centerHorizontal="true"
-		                    android:text="@string/general_subscribe"/>
+		                    android:textColor="@color/accentColor"
+		                    android:fontFamily="sans-serif-medium"/>
                         
                     </RelativeLayout>
                     
@@ -359,10 +369,12 @@
 		                    android:id="@+id/monthly_annualy_subscribe_annualy_text"
 		                    android:layout_width="wrap_content"
 		                    android:layout_height="wrap_content"
-		                    android:textSize="14sp"
+		                    android:text="@string/general_subscribe"
 		                    android:textAllCaps="true"
+		                    android:textSize="14sp"
 		                    android:layout_centerHorizontal="true"
-		                    android:text="@string/general_subscribe"/>
+		                    android:textColor="@color/accentColor"
+		                    android:fontFamily="sans-serif-medium"/>
                         
                     </RelativeLayout>
                     
@@ -376,8 +388,12 @@
             android:id="@+id/monthly_annualy_layout_subscribe_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_margin="5dp"
+            android:background="@drawable/card_corner"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="2dp"
             android:gravity="center_vertical">
                 
             <TextView 
