Bug #3571 - TourImage and TourBar not filling whole screen width

--- a/res/layout/tour_image_layout.xml
+++ b/res/layout/tour_image_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageTour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+		android:adjustViewBounds="true"/>
 
 </LinearLayout>
