--- a/res/layout-v21/activity_tour.xml
+++ b/res/layout-v21/activity_tour.xml
@@ -1,19 +1,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/background_secondary"
     tools:context=".LoginActivityLollipop" >
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background"
             android:orientation="vertical"
@@ -22,15 +22,45 @@
 
             <mega.privacy.android.app.components.LoopViewPager
                 android:id="@+id/pager"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
-            <ImageView
-                android:id="@+id/barTour"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/tour01_bar" />
+            <LinearLayout 
+                android:id="@+id/bar_tour_layout"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:orientation="horizontal">
+                
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+            </LinearLayout>            
         </LinearLayout>
 
         <include layout="@layout/delimiter" />
@@ -63,7 +93,7 @@
 
         <View
             android:id="@+id/separator"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="1dip"
             android:background="@color/delimiterColor" />
 
