--- a/res/layout/activity_cam_sync_initial.xml
+++ b/res/layout/activity_cam_sync_initial.xml
@@ -43,6 +43,7 @@
 						    android:text="@string/cam_sync_wifi"
 						    android:checked="true"
 						    style="@style/radio_MEGA"
+						    android:textColor="@color/file_list_first_row"
 						    android:layout_marginBottom="3dp" />
 						
 						<RadioButton 
@@ -50,6 +51,7 @@
 						    android:layout_width="wrap_content" 
 						    android:layout_height="wrap_content" 
 						    android:text="@string/cam_sync_data"
+						    android:textColor="@color/file_list_first_row"
 						    style="@style/radio_MEGA" />
 					</RadioGroup>
 					
