Bug #3648 - CameraUploadFragment wrong colors on month-year row

--- a/res/layout/item_photo_sync_list.xml
+++ b/res/layout/item_photo_sync_list.xml
@@ -37,6 +37,7 @@
 	        android:layout_toRightOf="@id/photo_sync_list_thumbnail"
 	        android:paddingLeft="3dp"
 	        android:paddingTop="7dp"
+	        android:textColor="@color/file_list_first_row"
 	        android:singleLine="false" />
 	    
 	    <TextView
@@ -159,21 +160,17 @@
 	    android:layout_height="wrap_content"
 	    android:descendantFocusability="blocksDescendants"
 	    android:id="@+id/photo_sync_list_month_layout" 
-	    android:background="@color/photo_sync_month_layout"
-	    android:layout_marginLeft="0dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="0dp" >
+	    android:background="@color/photo_sync_month_layout" 
+	    android:layout_marginLeft="72dp" >
 	    
     	<TextView
 	        android:id="@+id/photo_sync_list_month_name"
-	        android:layout_width="225dp"
-	        android:layout_height="30dp"
-	        android:layout_marginLeft="10dp"
-	        android:layout_marginTop="4dp"
-	        android:layout_marginBottom="4dp"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
 	        android:singleLine="false" 
-	        android:textColor="@color/white"
-	        android:textSize="18sp"/>
+	        android:textColor="@color/photo_sync_month_text"
+	        android:textSize="14sp"
+	        android:textStyle="bold"/>
     
 	</RelativeLayout>	
     
