--- a/res/layout/cell_grid_fill.xml
+++ b/res/layout/cell_grid_fill.xml
@@ -128,6 +128,7 @@
 	        android:layout_height="wrap_content"	
 	        android:paddingLeft="6dp"
 	        android:paddingTop="3dp"
+	        android:textColor="@color/file_list_first_row"
 	        android:layout_below="@id/cell_separator" />
         
               
