--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -44,6 +44,7 @@
         android:layout_width="225dp"
         android:layout_height="30dp"
         android:layout_toRightOf="@id/file_list_thumbnail"
+        android:textColor="@color/file_list_first_row"
         android:paddingLeft="3dp"
         android:paddingTop="7dp"
         android:ellipsize="end"
