Bug #3653 - TakePicture and FullScreenImageViewer crash on Android 4.x

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -115,7 +115,7 @@
     </style>
     
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light">
-	    <item name="android:windowNoTitle">true</item>
+	    <item name="windowNoTitle">true</item>
 	    <item name="windowActionBar">false</item>
 	    <item name="android:windowFullscreen">true</item>
 	    <item name="android:windowContentOverlay">@null</item>
